clang/test/BSC/Negative/Method/This/this_as_first_parameter/member_function_call/struct_member_function_call_safe/struct_member_function_call_safe.cbs
// RUN: %clang_cc1 -verify %s

struct Foo {
  int a;
};

_Safe T* _Owned safe_malloc<T>(T value);
_Safe void free_owned<T>(T* _Owned p);

_Safe int struct Foo::getA(This this) {
  return this.a;
}

_Safe int struct Foo::getB(This* this) {
  return this->a; // expected-error {{'->' operator used by raw pointer type is forbidden in the safe zone}}
}

_Safe int struct Foo::getB_2(const This* this) {
  return this->a; // expected-error {{'->' operator used by raw pointer type is forbidden in the safe zone}}
}

_Safe int struct Foo::getC(This* _Borrow this) {
  this->a = 2;
  return this->a;
}

_Safe int struct Foo::getC_2(const This* _Borrow this) {
  return this->a;
}

_Safe void struct Foo::getD(This* _Owned this) {
  free_owned<struct Foo>(this);
}

_Safe void test_This_actual_param(void) {
  struct Foo foo = {.a = 1};
  int s_a = foo.getA();  // expect ok, run ok
  int s_b = foo.getB();  // expect error, function getB is error
  int s_b2 = foo.getB_2(); // expect error, function getB_2 is error
  int s_c = foo.getC();  // expect ok, run ok
  int s_c2 = foo.getC_2();  // expect ok, run ok
  foo.getD();  // expected-error {{incompatible conversion from non _Owned type 'struct Foo' to _Owned type 'struct Foo *_Owned' in member function call}}
}

void test_This_pointer_actual_param() {
  struct Foo foo = {.a = 1};
  struct Foo * foo_p = &foo;
  _Safe {
    // expected-error@+1 {{'->' operator used by raw pointer type is forbidden in the safe zone}}
    int s_a = foo_p->getA(); // expected-error {{incompatible conversion from pointer type 'struct Foo *' to non-pointer type 'struct Foo' in member function call}}
    int s_b = foo_p->getB(); // expected-error {{'->' operator used by raw pointer type is forbidden in the safe zone}}
    int s_b2 = foo_p->getB_2(); // expected-error {{'->' operator used by raw pointer type is forbidden in the safe zone}}
    int s_c = foo_p->getC(); // expected-error {{'->' operator used by raw pointer type is forbidden in the safe zone}}
    int s_c2 = foo_p->getC_2();  // expected-error {{'->' operator used by raw pointer type is forbidden in the safe zone}}
    // expected-error@+1 {{'->' operator used by raw pointer type is forbidden in the safe zone}}
    foo_p->getD();  // expected-error {{incompatible conversion from non _Owned type 'struct Foo *' to _Owned type 'struct Foo *_Owned' in member function call}}
  }
}

void test_const_This_pointer_actual_param() {
  struct Foo foo = {.a = 1};
  const struct Foo * c_foo_p = &foo;
  _Safe {
    // expected-error@+1 {{'->' operator used by raw pointer type is forbidden in the safe zone}}
    int s_a = c_foo_p->getA();  // expected-error {{incompatible conversion from pointer type 'const struct Foo *' to non-pointer type 'struct Foo' in member function call}}
    // expected-error@+1 {{'->' operator used by raw pointer type is forbidden in the safe zone}}
    int s_b = c_foo_p->getB(); // expected-error {{incompatible conversion from const type 'const struct Foo *' to non-const type 'struct Foo *' in member function call}}
    int s_b2 = c_foo_p->getB_2(); // expected-error {{'->' operator used by raw pointer type is forbidden in the safe zone}}
    // expected-error@+1 {{'->' operator used by raw pointer type is forbidden in the safe zone}}
    int s_c = c_foo_p->getC();  // expected-error {{incompatible conversion from const type 'const struct Foo *' to non-const type 'struct Foo *_Borrow' in member function call}}
    // expected-error@+1 {{'->' operator used by raw pointer type is forbidden in the safe zone}}
    int s_c2 = c_foo_p->getC_2();  // expect error, run error
    // expected-error@+1 {{'->' operator used by raw pointer type is forbidden in the safe zone}}
    c_foo_p->getD();  // expected-error {{incompatible conversion from non _Owned type 'const struct Foo *' to _Owned type 'struct Foo *_Owned' in member function call}}
  }
}

_Safe void test_This_pointer_borrow_actual_param(void) {
  struct Foo foo = {.a = 1};
  struct Foo * _Borrow foo_mut = &_Mut foo;
  int s_a = foo_mut->getA();  // expected-error {{incompatible conversion from pointer type 'struct Foo *_Borrow' to non-pointer type 'struct Foo' in member function call}}
  int s_b = foo_mut->getB();  // expect error, function getB is error
  int s_b2 = foo_mut->getB_2(); // expect error, function getB_2 is error
  int s_c = foo_mut->getC();  // expect ok, run ok
  int s_c2 = foo_mut->getC_2();  // expect ok, run ok
  foo_mut->getD();  // expected-error {{incompatible conversion from non _Owned type 'struct Foo *_Borrow' to _Owned type 'struct Foo *_Owned' in member function call}}
}

_Safe void test_const_This_pointer_borrow_actual_param(void) {
  struct Foo foo = {.a = 1};
  const struct Foo *_Borrow c_foo_mut = &_Const foo; // incompatible _Borrow types, cannot cast 'const struct Foo *_Borrow'
  int a = c_foo_mut->getA();  // expected-error {{incompatible conversion from pointer type 'const struct Foo *_Borrow' to non-pointer type 'struct Foo' in member function call}}
  int b = c_foo_mut->getB();  // expected-error {{incompatible conversion from const type 'const struct Foo *_Borrow' to non-const type 'struct Foo *' in member function call}}
  int b2 = c_foo_mut->getB_2(); // expect error, function getB_2 is error
  int c = c_foo_mut->getC();  // expected-error {{incompatible conversion from const type 'const struct Foo *_Borrow' to non-const type 'struct Foo *_Borrow' in member function call}}
  int c2 = c_foo_mut->getC_2();  // expect ok, run ok
  c_foo_mut->getD();  // expected-error {{incompatible conversion from non _Owned type 'const struct Foo *_Borrow' to _Owned type 'struct Foo *_Owned' in member function call}}
}

_Safe void test_This_pointer_owned_actual_param(void) {
  struct Foo foo = {.a = 1};
  struct Foo * _Owned foo_owned = safe_malloc<struct Foo>(foo);
  int s_a = foo_owned->getA();  // expected-error {{incompatible conversion from pointer type 'struct Foo *_Owned' to non-pointer type 'struct Foo' in member function call}}
  int s_b = foo_owned->getB(); // expect error, function getB is error
  int s_b2 = foo_owned->getB_2(); // expect error, function getB_2 is error
  int s_c = foo_owned->getC();  // expect ok, run ok
  int s_c2 = foo_owned->getC_2();  // expect ok, run ok
  foo_owned->getD();  // expect ok, run ok
}
